fixed horizontal scroll, fixed skills section and added linkedIn link

--- a/style.css
+++ b/style.css
@@ -17,16 +17,15 @@ a:link{
     text-decoration: none;
 }
 :root{
-    font-size: 10px;
-    /* 62.5 is font-size 10 */
+     font-size: 10px;
     --primary-color:  #D2E3C8; 
     --secondary-color: #D2E3C8;
     --other-color: #CD8D7A;
 }
 body{
     font-family: 'Oswald', sans-serif;
-    /* line-height:1.8; */
     display:flex;
+    
 }
 /* sidebar */
 .sidebar-nav{
@@ -47,7 +46,7 @@ body{
 }
 .sidebar-nav .container .skills {
     display: flex;
-    height: 100%;
+    height: 100vw;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
@@ -74,13 +73,15 @@ header {
 }
 .main-nav{
     height:100%;
+    max-width: 100vw;
 }
 .main-nav .site-links{
     height:100%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items:center;
 }
+
 .main-nav .site-links li a {
     font-size: calc(1rem + 1vw);
     margin-right: calc(1rem + 1vw);
@@ -118,7 +119,8 @@ header {
 }
 
 .hero{
-    height:100vh;
+    max-width: 100vw;
+    height: 100vh;
     background-color: var(--other-color);
     background-image:url("./images/banner.jpg");
     background-position: center;
@@ -134,67 +136,84 @@ header {
     background-color: var(--secondary-color);
     padding: calc(0.5rem + 1vw);
     opacity: 0.8;
+    
+       
 }
 .hero .content h1{
     font-size: calc(2rem + 1vw);
+    
 }
 .hero .content p{
     font-size: calc(1rem + 1vw);
     font-family: "EB Garamond", serif;
+    flex-wrap: wrap;
+    
+    
 }
 .project{
     display:flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     justify-content: center;
     padding: 2rem;
     background-color: var(--secondary-color);
-    
+    max-width: 100vw;
+}
+
+.project .card-1{
+    flex-basis: 40rem;
+    padding:0;
+    flex-grow: 8;
+    flex-shrink: 0;
+}
+.project .card-1 img{
+    width:100%;
+    height: 100%;
 }
 .project .card{
     flex-basis: 40rem;
-    flex-grow: 1;
     padding:0;
+    flex-grow: 1;
+    flex-shrink: 0;
 }
 .project .card img{
     width:100%;
     height:100%;
+    
 } 
-
-.project .card-1{
-    flex-basis: 40rem;
-    flex-grow: 1;
-    padding:0;
-}
 
 .project .card img:hover{
     cursor: pointer;
-    transform: scale(1.1);
-
+    transform: scale(1.2);
+    
 }
 
 .project .card-1 img:hover{
     cursor: pointer;
-    transform: scale(1.1);
-
+    transform: scale(1.2);
+   
 }
-
-.social-links ul li a{
-    font-size: calc(0.5rem + 1vw);
-    background-color: var(--secondary-color);
-    background-position: center;
-    background-size: cover;
-    background-blend-mode:luminosity;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-}
- .social-links a:hover,
- .social-links a:active{
-     color:var(--other-color);
-         
-  } 
+     .social ul li{
+        font-size: calc(0.5rem + 1vw);
+        background-color: var(--secondary-color);
+        background-position: center;
+        background-size: cover;
+        background-blend-mode:luminosity;
+        background-attachment: fixed;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: var(--other-color);
+        text-align: center;
+    }
+    .social ul li a{
+        text-decoration: none;
+        color: var(--other-color);
+    }
+    
+ .social ul li a:hover,
+ .social ul li a:active{
+     color:black;
+    } 
 @media screen and (max-width: 1040px) {
 .hero{
     background-position: 80%;
@@ -239,11 +258,10 @@ header {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        flex:100%;
-        max-width: 100%;
-        } 
+        
+    } 
     .project .card{
-        flex-grow: 0;
+        flex-grow: 1;
         padding:0;
     }
     .project .card-1{
@@ -258,14 +276,7 @@ header {
         width:100%;
         height:100%;
     }
-    /* .skills h3{
-        background-color: var(--secondary-color);
-        background-position: center;
-        font-size: calc(1rem + 1vw);
-        text-align:left;
-        color: var(--other-color);
-    } */
-    .social ul li{
+        .social ul li, .social ul li a{
         font-size: calc(0.5rem + 1vw);
         background-color: var(--secondary-color);
         background-position: center;
@@ -279,19 +290,5 @@ header {
         text-align: left;
     }
 
-    /* .sidebar-nav .container .social-links{
-        display: flex;
-        height: 100%;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: center;
-        list-style: none;
-        
-    }   
-    .sidebar-nav .container .social-links a{
-       font-size: calc(0.7rem + 0.7vw);
-       color:black;
-       margin-bottom: calc(2rem+ 1vw);
-    } */
 }
 
